fix axis label alignment

--- a/src/css/organisms/map-legend.css
+++ b/src/css/organisms/map-legend.css
@@ -192,8 +192,6 @@ when it is just the preview chart
     right:auto;
   }
 
-
-
   /** Axis Name */
   .scatterplot-preview .legend-bar.legend-bar--y-preview .legend-bar__title {
     top:0; bottom:0;
@@ -210,7 +208,7 @@ when it is just the preview chart
     transform: rotate(-90deg);
     height: 24px;
     display: flex;
-    width: 196px;
+    width: 220px;
     transform-origin: top left;
     top: auto;
     bottom: -24px;
